--- a/ClientBanque/.settings/org.eclipse.wst.common.component
+++ b/ClientBanque/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="ClientBanque">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/WEB-INF/lib"/>
         <property name="context-root" value="ClientBanque"/>
         <property name="java-output-path" value="/ClientBanque/build/classes"/>
     </wb-module>
